--- a/.github/workflows/testdeploy.yml
+++ b/.github/workflows/testdeploy.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.2'
+        php-version: '8.4'
         extensions: mbstring, xml, ctype, iconv, intl, pdo, bcmath, curl, gd, zip
         coverage: none
 
@@ -37,8 +37,7 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
-        server-dir: /home/seshtmmb/sesha.website/easygist/
-        # sesha.website/easygist/home/seshtmmb/sesha.website/easygist
+        server-dir: /who.sesha.website/
         exclude: |
           **/.git*
           **/.gitignore
